--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3226,6 +3226,14 @@ input, select, textarea {
   border-radius: 7px;
   padding-left: 2px;
   padding-right: 2px;
-  background-color: #5cc6a7;
+  background-color: #d3d3d3;
   display: inline-block;
+}
+
+.main_paragraph {
+  color: rgba(0, 0, 0, 0.7);
+}
+
+.border {
+  border: 2px solid rgba(0, 0, 0, 0.7);
 }
